--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
+    <!-- Auth Google -->
+    <script
+      src="https://accounts.google.com/gsi/client"
+      onload="console.log('TODO: add onload function')"
+    ></script>
+    <!-- /Auth Google -->
   </head>
   <body>
     <div id="root"></div>
